--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <div class="contaner">
       <div class="header-title" >Форма отправки </div>
       <form class="form" data-form="form">
-         <input class="form__title" type="text" name="title">
+         <input class="form__title" type="text" name="title" placeholder="Введите свое имя">
          <button class="form__button" type="button" data-form="button">Сохранить</button>
       </form>
 
